--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,140 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
 
-  </body>
+<body class="page__body">
+  <header class="main-header">
+    <a class="main-header__logo" href="#">
+      <img src="img/logo/logo-mobile.svg" width="33" height="37" alt="Логотип Cat Energy">
+      <img src="img/logo/logo-text.svg" width="128" height="24" alt="" aria-hidden="true">
+    </a>
+    <p class="main-header__cat">CAT<span class="main-header__energy">ENERGY</span></p>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list">
+          <li class="main-nav__list-item main-nav__list-item--active">
+            <a>Главная</a>
+          </li>
+          <li class="main-nav__list-item">
+            <a href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-nav__list-item">
+            <a href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="main-container">
+    <section class="cover">
+      <div class="cover__wrapper">
+        <h1 class="cover__title">Функциональное<br>
+          питание для котов
+        </h1>
+        <p class="cover__slogan">Занялся собой? Займись котом!
+        </p>
+        <button class="cover__button button" type="button">подобрать программу
+        </button>
+        <img src="img/cover-product.png" width="280" height="270" alt="Натуральный продукт Cat Energy">
+      </div>
+    </section>
+    <section class="advantages">
+      <h2 class="visually-hidden">Наши преимущества</h2>
+      <div class="advantages__wrapper advantages__wrapper--slim">
+        <h3 class="advantages__title">Похудение</h3>
+        <p class="advantages__discription">Ваш кот весит больше собаки и почти утратил способность
+          лазить по деревьям? Пора на диету! Cat Energy Slim поможет
+          вашему питомцу сбросить лишний вес
+        </p>
+        <a class="advantages__button" href="#">каталог slim</a>
+      </div>
+      <div class="advantages__wrapper advantages__wrapper--mass">
+        <h2 class="advantages__title">набор массы</h2>
+        <p class="advantages__discription">Заработать авторитет среди дворовых котов и даже собак?
+          Серия Cat Energy Pro поможет вашему коту нарастить
+          необходимые мышцы!
+        </p>
+        <a class="advantages__button" href="#">каталог pro</a>
+      </div>git
+    </section>
+    <section class="progress">
+      <div class="progress__wrapper">
+        <h2 class="progress__title">Как это работает</h2>
+        <ul class="progress__list">
+          <li class="progress__item progress__item--leaf">
+            <p class="progress__discription">Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="progress__item progress__item--instant">
+            <p class="progress__discription">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="progress__item progress__item--food">
+            <p class="progress__discription">Замените один-два приема обычной еды на наше функциональное питание.
+            </p>
+          </li>
+          <li class="progress__item progress__item--timer">
+            <p class="progress__discription">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="result">
+      <div class="result__wrapper">
+        <!-- классы для фоток и ползунка как воткнуть пока не знаю. -->
+        <h2 class="result__title">Живой пример</h2>
+        <p class="result__discription">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой
+          обычный корм на Cat Energy Slim. Отличный результат
+          без изнуряющих тренировок! При этом он не менял своих
+          привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <div class="result__weight">
+          <p class="result__kg">5 КГ</p>
+          <p class="result__discription">снижение веса</p>
+        </div>
+        <div class="result__days">
+          <p class="result__day">60 ДНЕЙ</p>
+          <p class="result__spent-time">затрачено времени</p>
+        </div>
+        <p class="result__total">Затраты на питание:<span class="result__money">15 000 РУБ.</span></p>
+      </div>
+    </section>
+    <section class="contacts">
+      <div class="contacts__wrapper">
+        <h3 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
+        <h2 class="visually-hidden">Наш адрес.</h2>
+        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <div class="map-responsive">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858715776165!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2ses!4v1659444562271!5m2!1sru!2ses"
+          width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <div class="main-footer__wrapper">
+      <h2 class="visually-hidden">Мы в социальных сетях.</h2>
+      <a class="main-footer__logo" href="#"><img class="main-footer__logo-img" src="img/logo/logo-text.svg"
+          alt="Логотип Cat Energy"></a>
+      <ul class="social-list">
+        <li class="social-list__vk"><a class="social-list__vk-btn" href="https://vk.com/htmlacademy"></a></li>
+        <li class="social-list__youtube"><a class="social-list__youtub-btn"
+            href="https://www.youtube.com/user/htmlacademy"></a></li>
+        <li class="social-list__telegram"><a class="social-list__telegram-btn" href="https://t.me/htmlacademy"></a>
+        </li>
+      </ul>
+      <a class="social-list__sponsor" href="#">HTML Academy</a>
+    </div>
+  </footer>
+</body>
+
 </html>
