Испарвления после первой проверки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,11 +8,11 @@
 
 <body class="page__body">
   <header class="main-header">
+    <h1 class="main-header__title">Каталог продукции</h1>
     <a class="main-header__logo" href="#">
       <img src="img/logo/logo-mobile.svg" width="33" height="37" alt="Логотип Cat Energy">
       <img src="img/logo/logo-text.svg" width="128" height="24" alt="" aria-hidden="true">
     </a>
-    <p class="main-header__cat">CAT<span class="main-header__energy">ENERGY</span></p>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
@@ -33,66 +33,82 @@
   <main class="main-catalog">
     <section class="catalog">
       <div class="catalog__list">
-        <h1 class="catalog__title">Каталог продукции</h1>
+        <h2 class="visually-hidden">Наши товары.</h2>
         <article class="product">
-          <a class="product__link1" href="#"></a>
-          <h2 class="product__name">Cat Energy PRO 500 г</h2>
+          <a class="product__link1" href="#"><img src="../source/img/products/eat-1.png" width="168" height="200"
+              alt="Изображение упаковки товара">
+            <h3 class="product__name">Cat Energy PRO 500 г</h3>
+          </a>
           <p class="product__mass">Масса<span class="product__weight">500 г</span></p>
           <p class="product__taste">Вкус<span class="product__type">Курица</span></p>
           <p class="product__price">Цена<span class="product__cost">700 P</span></p>
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link2" href="#"></a>
-          <h2 class="product__name">Cat Energy PRO 500 г</h2>
+          <a class="product__link2" href="#"><img src="../source/img/products/eat-2.png" width="168" height="200"
+              alt="Изображение упаковки товара">
+            <h3 class="product__name">Cat Energy PRO 500 г</h3>
+          </a>
           <p class="product__mass">Масса<span class="product__weight">1000 г</span></p>
           <p class="product__taste">Вкус<span class="product__type">Курица</span></p>
           <p class="product__price">Цена<span class="product__cost">1000 P</span></p>
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link3" href="#"></a>
-          <h2 class="product__name">Cat Energy PRO 500 г</h2>
+          <a class="product__link3" href="#"><img src="../source/img/products/eat-3.png" width="168" height="200"
+              alt="Изображение упаковки товара">
+            <h3 class="product__name">Cat Energy PRO 500 г</h3>
+          </a>
           <p class="product__mass">Масса<span class="product__weight">500 г</span></p>
           <p class="product__taste">Вкус<span class="product__type">Рыба</span></p>
           <p class="product__price">Цена<span class="product__cost">700 P</span></p>
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link4" href="#"></a>
-          <h2 class="product__name">Cat Energy PRO 1000 г</h2>
+          <a class="product__link4" href="#"><img src="../source/img/products/eat-4.png" width="168" height="200"
+              alt="Изображение упаковки товара">
+            <h3 class="product__name">Cat Energy PRO 1000 г</h3>
+          </a>
           <p class="product__mass">Масса<span class="product__weight">1000 г</span></p>
           <p class="product__taste">Вкус<span class="product__type">Рыба</span></p>
           <p class="product__price">Цена<span class="product__cost">1000 P</span></p>
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link5" href="#"></a>
-          <h2 class="product__name">Cat Energy SLIM 500 г</h2>
+          <a class="product__link5" href="#"><img src="../source/img/products/eat-5.png" width="168" height="200"
+              alt="Изображение упаковки товара">
+            <h3 class="product__name">Cat Energy SLIM 500 г</h3>
+          </a>
           <p class="product__mass">Масса<span class="product__weight">500 г</span></p>
           <p class="product__taste">Вкус<span class="product__type">Гречка</span></p>
           <p class="product__price">Цена<span class="product__cost">400 P</span></p>
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link6" href="#"></a>
-          <h2 class="product__name">Cat Energy SLIM 1000 г</h2>
+          <a class="product__link6" href="#"><img src="../source/img/products/eat-6.png" width="168" height="200"
+              alt="Изображение упаковки товара">
+            <h3 class="product__name">Cat Energy SLIM 1000 г</h3>
+          </a>
           <p class="product__mass">Масса<span class="product__weight">1000 г</span></p>
           <p class="product__taste">Вкус<span class="product__type">Гречка</span></p>
           <p class="product__price">Цена<span class="product__cost">700 P</span></p>
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link7" href="#"></a>
-          <h2 class="product__name">Cat Energy SLIM 500 г</h2>
+          <a class="product__link7" href="#"><img src="../source/img/products/eat-7.png" width="168" height="200"
+              alt="Изображение упаковки товара">
+            <h3 class="product__name">Cat Energy SLIM 500 г</h3>
+          </a>
           <p class="product__mass">Масса<span class="product__weight">500 г</span></p>
           <p class="product__taste">Вкус<span class="product__type">Рис</span></p>
           <p class="product__price">Цена<span class="product__cost">500 P</span></p>
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
-        <h3 class="more">Показать еще 100500 товаров</h3>
-        <p class="more__subtitle">На самом деле вкусов гораздо больше!</p>
-        <button class="more__button button" type="button">показать все</button>
+        <article class="more">
+          <h3 class="more__title">Показать еще 100500 товаров</h3>
+          <p class="more__subtitle">На самом деле вкусов гораздо больше!</p>
+          <button class="more__button button" type="button">показать все</button>
+        </article>
       </div>
     </section>
     <!-- Дополнительные товары -->
@@ -133,7 +149,7 @@
     <!-- Наш адрес -->
     <section class="contacts">
       <div class="contacts__wrapper">
-        <h3 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
+        <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
         <h2 class="visually-hidden">Наш адрес.</h2>
         <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
@@ -157,7 +173,7 @@
         <li class="social-list__telegram"><a class="social-list__telegram-btn" href="https://t.me/htmlacademy"></a>
         </li>
       </ul>
-      <a class="social-list__sponsor" href="#">HTML Academy</a>
+      <a class="sponsor" href="#">HTML Academy</a>
     </div>
   </footer>
 </body>
