--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,7 @@
       <div class="catalog__list">
         <h2 class="visually-hidden">Наши товары.</h2>
         <article class="product">
-          <a class="product__link1" href="#"><img src="../source/img/products/eat-1.png" width="168" height="200"
+          <a class="product__link1" href="#"><img src="./source/img/products/eat-1.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
@@ -45,7 +45,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link2" href="#"><img src="../source/img/products/eat-2.png" width="168" height="200"
+          <a class="product__link2" href="#"><img src="./source/img/products/eat-2.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
@@ -55,7 +55,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link3" href="#"><img src="../source/img/products/eat-3.png" width="168" height="200"
+          <a class="product__link3" href="#"><img src="./source/img/products/eat-3.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
@@ -65,7 +65,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link4" href="#"><img src="../source/img/products/eat-4.png" width="168" height="200"
+          <a class="product__link4" href="#"><img src="./source/img/products/eat-4.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy PRO 1000 г</h3>
           </a>
@@ -75,7 +75,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link5" href="#"><img src="../source/img/products/eat-5.png" width="168" height="200"
+          <a class="product__link5" href="#"><img src="./source/img/products/eat-5.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy SLIM 500 г</h3>
           </a>
@@ -85,7 +85,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link6" href="#"><img src="../source/img/products/eat-6.png" width="168" height="200"
+          <a class="product__link6" href="#"><img src="./source/img/products/eat-6.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy SLIM 1000 г</h3>
           </a>
@@ -95,7 +95,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link7" href="#"><img src="../source/img/products/eat-7.png" width="168" height="200"
+          <a class="product__link7" href="#"><img src="./source/img/products/eat-7.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy SLIM 500 г</h3>
           </a>
