:heavy_check_mark: Сборка #2

--- a/2/catalog.html
+++ b/2/catalog.html
@@ -36,7 +36,7 @@
       <div class="catalog__list">
         <h2 class="visually-hidden">Наши товары.</h2>
         <article class="product">
-          <a class="product__link1" href="#"><img src="../source/img/products/eat-1.png" width="168" height="200"
+          <a class="product__link1" href="#"><img src="./source/img/products/eat-1.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
@@ -46,7 +46,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link2" href="#"><img src="../source/img/products/eat-2.png" width="168" height="200"
+          <a class="product__link2" href="#"><img src="./source/img/products/eat-2.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
@@ -56,7 +56,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link3" href="#"><img src="../source/img/products/eat-3.png" width="168" height="200"
+          <a class="product__link3" href="#"><img src="./source/img/products/eat-3.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
@@ -66,7 +66,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link4" href="#"><img src="../source/img/products/eat-4.png" width="168" height="200"
+          <a class="product__link4" href="#"><img src="./source/img/products/eat-4.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy PRO 1000 г</h3>
           </a>
@@ -76,7 +76,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link5" href="#"><img src="../source/img/products/eat-5.png" width="168" height="200"
+          <a class="product__link5" href="#"><img src="./source/img/products/eat-5.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy SLIM 500 г</h3>
           </a>
@@ -86,7 +86,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link6" href="#"><img src="../source/img/products/eat-6.png" width="168" height="200"
+          <a class="product__link6" href="#"><img src="./source/img/products/eat-6.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy SLIM 1000 г</h3>
           </a>
@@ -96,7 +96,7 @@
           <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
         </article>
         <article class="product">
-          <a class="product__link7" href="#"><img src="../source/img/products/eat-7.png" width="168" height="200"
+          <a class="product__link7" href="#"><img src="./source/img/products/eat-7.png" width="168" height="200"
               alt="Изображение упаковки товара">
             <h3 class="product__name">Cat Energy SLIM 500 г</h3>
           </a>
