--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body class="page__body">
-  <header class="main-header">
-    <h1 class="main-header__title">Каталог продукции</h1>
+<body class="page">
+  <header class="main-header main-header--catalog">
     <a class="main-header__logo" href="#">
       <img src="img/logo/logo-mobile.svg" width="33" height="37" alt="Логотип Cat Energy">
       <img src="img/logo/logo-text.svg" width="128" height="24" alt="" aria-hidden="true">
@@ -30,84 +30,106 @@
       </div>
     </nav>
   </header>
+  <h1 class="main-catalog-title">Каталог продукции</h1>
   <main class="main-catalog">
     <section class="catalog">
       <div class="catalog__list">
         <h2 class="visually-hidden">Наши товары.</h2>
         <article class="product">
-          <a class="product__link1" href="#"><img src="./img/products/eat-1.png" width="168" height="200"
+          <h3 class="visually-hidden">Cat Energy PRO 500 г</h3>
+          <a class="product__link1" href="#"><img src="./img/products/eat-1.png" width="140" height="112"
               alt="Изображение упаковки товара">
-            <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
-          <p class="product__mass">Масса<span class="product__weight">500 г</span></p>
-          <p class="product__taste">Вкус<span class="product__type">Курица</span></p>
-          <p class="product__price">Цена<span class="product__cost">700 P</span></p>
-          <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
+          <a href="#" class="product__name">Cat Energy <br> PRO 500 г</a>
+          <div class="product__discription">
+            <p class="product__discription-name">Масса<span class="product__discription-value">500 г</span></p>
+            <p class="product__discription-name">Вкус<span class="product__discription-value">Курица</span></p>
+            <p class="product__discription-name">Цена<span class="product__discription-value">700 P</span></p>
+          </div>
+          <a href="" class="product__button button">ЗАКАЗАТЬ</a>
         </article>
         <article class="product">
-          <a class="product__link2" href="#"><img src="img/products/eat-2.png" width="168" height="200"
+          <h3 class="visually-hidden">Cat Energy PRO 1000 г</h3>
+          <a class="product__link1" href="#"><img src="./img/products/eat-2.png" width="140" height="112"
               alt="Изображение упаковки товара">
-            <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
-          <p class="product__mass">Масса<span class="product__weight">1000 г</span></p>
-          <p class="product__taste">Вкус<span class="product__type">Курица</span></p>
-          <p class="product__price">Цена<span class="product__cost">1000 P</span></p>modul
-          <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
+          <a href="#" class="product__name">Cat Energy <br> PRO 1000 г</a>
+          <div class="product__discription">
+            <p class="product__discription-name">Масса<span class="product__discription-value">1000 г</span></p>
+            <p class="product__discription-name">Вкус<span class="product__discription-value">Курица</span></p>
+            <p class="product__discription-name">Цена<span class="product__discription-value">1000 P</span></p>
+          </div>
+          <a href="" class="product__button button">ЗАКАЗАТЬ</a>
         </article>
         <article class="product">
-          <a class="product__link3" href="#"><img src="img/products/eat-3.png" width="168" height="200"
+          <h3 class="visually-hidden">Cat Energy PRO 500 г</h3>
+          <a class="product__link1" href="#"><img src="./img/products/eat-3.png" width="140" height="112"
               alt="Изображение упаковки товара">
-            <h3 class="product__name">Cat Energy PRO 500 г</h3>
           </a>
-          <p class="product__mass">Масса<span class="product__weight">500 г</span></p>
-          <p class="product__taste">Вкус<span class="product__type">Рыба</span></p>
-          <p class="product__price">Цена<span class="product__cost">700 P</span></p>
-          <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
+          <a href="#" class="product__name">Cat Energy <br> PRO 500 г</a>
+          <div class="product__discription">
+            <p class="product__discription-name">Масса<span class="product__discription-value">500 г</span></p>
+            <p class="product__discription-name">Вкус<span class="product__discription-value">Рыба</span></p>
+            <p class="product__discription-name">Цена<span class="product__discription-value">700 P</span></p>
+          </div>
+          <a href="" class="product__button button">ЗАКАЗАТЬ</a>
         </article>
         <article class="product">
-          <a class="product__link4" href="#"><img src="img/products/eat-4.png" width="168" height="200"
+          <h3 class="visually-hidden">Cat Energy PRO 1000 г</h3>
+          <a class="product__link1" href="#"><img src="./img/products/eat-4.png" width="140" height="112"
               alt="Изображение упаковки товара">
-            <h3 class="product__name">Cat Energy PRO 1000 г</h3>
           </a>
-          <p class="product__mass">Масса<span class="product__weight">1000 г</span></p>
-          <p class="product__taste">Вкус<span class="product__type">Рыба</span></p>
-          <p class="product__price">Цена<span class="product__cost">1000 P</span></p>
-          <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
+          <a href="#" class="product__name">Cat Energy <br> PRO 1000 г</a>
+          <div class="product__discription">
+            <p class="product__discription-name">Масса<span class="product__discription-value">1000 г</span></p>
+            <p class="product__discription-name">Вкус<span class="product__discription-value">Рыба</span></p>
+            <p class="product__discription-name">Цена<span class="product__discription-value">1000 P</span></p>
+          </div>
+          <a href="" class="product__button button">ЗАКАЗАТЬ</a>
         </article>
         <article class="product">
-          <a class="product__link5" href="#"><img src="img/products/eat-5.png" width="168" height="200"
+          <h3 class="visually-hidden">Cat Energy SLIM 500 г</h3>
+          <a class="product__link1" href="#"><img src="./img/products/eat-5.png" width="140" height="112"
               alt="Изображение упаковки товара">
-            <h3 class="product__name">Cat Energy SLIM 500 г</h3>
           </a>
-          <p class="product__mass">Масса<span class="product__weight">500 г</span></p>
-          <p class="product__taste">Вкус<span class="product__type">Гречка</span></p>
-          <p class="product__price">Цена<span class="product__cost">400 P</span></p>
-          <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
+          <a href="#" class="product__name">Cat Energy <br> PRO 1000 г</a>
+          <div class="product__discription">
+            <p class="product__discription-name">Масса<span class="product__discription-value">500 г</span></p>
+            <p class="product__discription-name">Вкус<span class="product__discription-value">Гречка</span></p>
+            <p class="product__discription-name">Цена<span class="product__discription-value">400 P</span></p>
+          </div>
+          <a href="" class="product__button button">ЗАКАЗАТЬ</a>
         </article>
         <article class="product">
-          <a class="product__link6" href="#"><img src="img/products/eat-6.png" width="168" height="200"
+          <h3 class="visually-hidden">Cat Energy SLIM 1000 г</h3>
+          <a class="product__link1" href="#"><img src="./img/products/eat-6.png" width="140" height="112"
               alt="Изображение упаковки товара">
-            <h3 class="product__name">Cat Energy SLIM 1000 г</h3>
           </a>
-          <p class="product__mass">Масса<span class="product__weight">1000 г</span></p>
-          <p class="product__taste">Вкус<span class="product__type">Гречка</span></p>
-          <p class="product__price">Цена<span class="product__cost">700 P</span></p>
-          <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
+          <a href="#" class="product__name">Cat Energy <br> SLIM 1000 г</a>
+          <div class="product__discription">
+            <p class="product__discription-name">Масса<span class="product__discription-value">1000 г</span></p>
+            <p class="product__discription-name">Вкус<span class="product__discription-value">Гречка</span></p>
+            <p class="product__discription-name">Цена<span class="product__discription-value">700 P</span></p>
+          </div>
+          <a href="" class="product__button button">ЗАКАЗАТЬ</a>
         </article>
         <article class="product">
-          <a class="product__link7" href="#"><img src="img/products/eat-7.png" width="168" height="200"
+          <h3 class="visually-hidden">Cat Energy SLIM 500 г</h3>
+          <a class="product__link1" href="#"><img src="./img/products/eat-7.png" width="140" height="112"
               alt="Изображение упаковки товара">
-            <h3 class="product__name">Cat Energy SLIM 500 г</h3>
           </a>
-          <p class="product__mass">Масса<span class="product__weight">500 г</span></p>
-          <p class="product__taste">Вкус<span class="product__type">Рис</span></p>
-          <p class="product__price">Цена<span class="product__cost">500 P</span></p>
-          <button class="product__button button" type="button">ЗАКАЗАТЬ</button>
+          <a href="#" class="product__name">Cat Energy <br> SLIM 500 г</a>
+          <div class="product__discription">
+            <p class="product__discription-name">Масса<span class="product__discription-value">500 г</span></p>
+            <p class="product__discription-name">Вкус<span class="product__discription-value">Рис</span></p>
+            <p class="product__discription-name">Цена<span class="product__discription-value">500 P</span></p>
+          </div>
+          <a href="" class="product__button button">ЗАКАЗАТЬ</a>
         </article>
         <article class="more">
           <h3 class="more__title">Показать еще 100500 товаров</h3>
           <p class="more__subtitle">На самом деле вкусов гораздо больше!</p>
-          <button class="more__button button" type="button">показать все</button>
+          <a class="more__button button" href="#">показать все</a>
         </article>
       </div>
     </section>
@@ -116,39 +138,39 @@
       <div class="additional__wrapper">
         <h2 class="additional__title">Дополнительные товары</h2>
         <table class="additional__list">
-          <tr>
-            <th>Сахарозаменитель</th>
-            <td>1 упаковка (100 г)</td>
-            <td>200 Р.</td>
-            <td><a href="#" class="additional__button button">заказать</a></td>
+          <tr class="additional__item">
+            <th class="additional__th">Сахарозаменитель</th>
+            <td class="additional__td">1 упаковка (100 г)</td>
+            <td class="additional__td">200 Р.</td>
+            <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
           </tr>
-          <tr>
-            <th>Питьевая вода</th>
-            <td>5 литров</td>
-            <td>50 Р.</td>
-            <td><a href="#" class="additional__button button">заказать</a></td>
+          <tr class="additional__item">
+            <th class="additional__th">Питьевая вода</th>
+            <td class="additional__td">5 литров</td>
+            <td class="additional__td">50 Р.</td>
+            <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
           </tr>
-          <tr>
-            <th>Молоко</th>
-            <td>1 литр</td>
-            <td>100 Р.</td>
-            <td><a href="#" class="additional__button button">заказать</a></td>
+          <tr class="additional__item">
+            <th class="additional__th">Молоко</th>
+            <td class="additional__td">1 литр</td>
+            <td class="additional__td">100 Р.</td>
+            <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
           </tr>
-          <tr>
-            <th>Витамины</th>
-            <td>1 упаковка (30 г)</td>
-            <td>300 Р.</td>
-            <td><a href="#" class="additional__button button">заказать</a></td>
+          <tr class="additional__item">
+            <th class="additional__th">Витамины</th>
+            <td class="additional__td">1 упаковка (30 г)</td>
+            <td class="additional__td">300 Р.</td>
+            <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
           </tr>
         </table>
         <div class="additional__promo">
-          <a href="#" class="additional__promo-link">Закажите все и получите чехол для кота в подарок!</a>
+          <a href="#" class="additional__promo-link">Закажите все<br> и получите чехол для<br> кота в подарок!</a>
         </div>
       </div>
     </section>
     <!-- Наш адрес -->
     <section class="contacts">
-      <div class="contacts__wrapper">
+      <div class="contacts__wrapper contacts__wrapper--background">
         <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
         <h2 class="visually-hidden">Наш адрес.</h2>
         <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
@@ -156,7 +178,7 @@
       <div class="map-responsive">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858715776165!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2ses!4v1659444562271!5m2!1sru!2ses"
-          width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy"
+          width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
@@ -165,12 +187,16 @@
     <div class="main-footer__wrapper">
       <h2 class="visually-hidden">Мы в социальных сетях.</h2>
       <a class="main-footer__logo" href="#"><img class="main-footer__logo-img" src="img/logo/logo-text.svg"
-          alt="Логотип Cat Energy"></a>
+          alt="Логотип Cat Energy" /></a>
       <ul class="social-list">
-        <li class="social-list__vk"><a class="social-list__vk-btn" href="https://vk.com/htmlacademy"></a></li>
-        <li class="social-list__youtube"><a class="social-list__youtub-btn"
-            href="https://www.youtube.com/user/htmlacademy"></a></li>
-        <li class="social-list__telegram"><a class="social-list__telegram-btn" href="https://t.me/htmlacademy"></a>
+        <li class="social-list__item">
+          <a class="social-list__vk-btn" href="https://vk.com/htmlacademy"></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__youtube-btn" href="https://www.youtube.com/user/htmlacademy"></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__telegram-btn" href="https://t.me/htmlacademy"></a>
         </li>
       </ul>
       <a class="sponsor" href="#">HTML Academy</a>
