4 модуль все три адаптива

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -148,34 +148,36 @@
     <section class="additional container">
       <div class="additional__wrapper">
         <h2 class="additional__title">Дополнительные товары</h2>
-        <table class="additional__list">
-          <tr class="additional__item">
-            <th class="additional__th">Сахарозаменитель</th>
-            <td class="additional__td additional__td-center">1 упаковка (100 г)</td>
-            <td class="additional__td additional__td-right">200 Р.</td>
-            <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
-          </tr>
-          <tr class="additional__item">
-            <th class="additional__th">Питьевая вода</th>
-            <td class="additional__td additional__td-center">5 литров</td>
-            <td class="additional__td additional__td-right">50 Р.</td>
-            <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
-          </tr>
-          <tr class="additional__item">
-            <th class="additional__th">Молоко</th>
-            <td class="additional__td additional__td-center">1 литр</td>
-            <td class="additional__td additional__td-right">100 Р.</td>
-            <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
-          </tr>
-          <tr class="additional__item">
-            <th class="additional__th">Витамины</th>
-            <td class="additional__td additional__td-center">1 упаковка (30 г)</td>
-            <td class="additional__td additional__td-right">300 Р.</td>
-            <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
-          </tr>
-        </table>
-        <div class="additional__promo">
-          <a href="#" class="additional__promo-link">Закажите все<br> и получите чехол для<br> кота в подарок!</a>
+        <div class="additional__desktop-wrapper">
+          <table class="additional__list">
+            <tr class="additional__item">
+              <th class="additional__th">Сахарозаменитель</th>
+              <td class="additional__td additional__td-center">1 упаковка (100 г)</td>
+              <td class="additional__td additional__td-right">200 Р.</td>
+              <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
+            </tr>
+            <tr class="additional__item">
+              <th class="additional__th">Питьевая вода</th>
+              <td class="additional__td additional__td-center">5 литров</td>
+              <td class="additional__td additional__td-right">50 Р.</td>
+              <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
+            </tr>
+            <tr class="additional__item">
+              <th class="additional__th">Молоко</th>
+              <td class="additional__td additional__td-center">1 литр</td>
+              <td class="additional__td additional__td-right">100 Р.</td>
+              <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
+            </tr>
+            <tr class="additional__item">
+              <th class="additional__th">Витамины</th>
+              <td class="additional__td additional__td-center">1 упаковка (30 г)</td>
+              <td class="additional__td additional__td-right">300 Р.</td>
+              <td class="additional__td-button"><a href="#" class="additional__button button">заказать</a></td>
+            </tr>
+          </table>
+          <div class="additional__promo">
+            <a class="additional__promo-link" href="#">Закажите все<br> и получите чехол для<br> кота в подарок!</a>
+          </div>
         </div>
       </div>
     </section>
