--- a/source/index.html
+++ b/source/index.html
@@ -21,13 +21,13 @@
     <nav class="main-nav">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__list-item main-nav__list-item--active">
+          <li class="main-nav__list-item main-nav__list-item--desktop main-nav__list-item--active-desktop ">
             <a>Главная</a>
           </li>
-          <li class="main-nav__list-item">
+          <li class="main-nav__list-item main-nav__list-item--desktop">
             <a href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="main-nav__list-item">
+          <li class="main-nav__list-item main-nav__list-item--desktop">
             <a href="form.html">Подбор программы</a>
           </li>
         </ul>
@@ -76,28 +76,24 @@
               Функциональное питание содержит только полезные питательные
               вещества.
             </p>
-            <span class="progress__background-number">1</span>
           </li>
           <li class="progress__item progress__item--instant">
             <p class="progress__discription">
               Выпускается в виде порошка, который нужно лишь залить кипятком и
               готово.
             </p>
-            <span class="progress__background-number">2</span>
           </li>
           <li class="progress__item progress__item--food">
             <p class="progress__discription">
               Замените один-два приема обычной еды на наше функциональное
               питание.
             </p>
-            <span class="progress__background-number">3</span>
           </li>
           <li class="progress__item progress__item--timer">
             <p class="progress__discription">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего
               питомца!
             </p>
-            <span class="progress__background-number">4</span>
           </li>
         </ul>
       </div>
