Проблема с файлом form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -145,10 +145,12 @@
       </div>
     </section>
     <!-- Дополнительные товары -->
-    <section class="additional container">
+    <section class="additional">
       <div class="additional__wrapper">
-        <h2 class="additional__title">Дополнительные товары</h2>
-        <div class="additional__desktop-wrapper">
+        <div class="container">
+          <h2 class="additional__title">Дополнительные товары</h2>
+        </div>
+        <div class="additional__desktop-wrapper container">
           <table class="additional__list">
             <tr class="additional__item">
               <th class="additional__th">Сахарозаменитель</th>
