--- a/source/index.html
+++ b/source/index.html
@@ -100,26 +100,27 @@
     </section>
     <section class="result">
       <div class="result__wrapper container">
-        <!-- классы для фоток и ползунка как воткнуть пока не знаю. -->
-        <h2 class="result__title">Живой пример</h2>
-        <p class="result__discription">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
-          Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
-          этом он не менял своих привычек и по-прежнему спит по 16 часов в
-          день.
-        </p>
-        <div class="result__block-wrapper">
-          <div class="result__block">
-            <p class="result__data">5 КГ</p>
-            <p class="result__indicators">снижение <br> веса</p>
-          </div>
-          <div class="result__block">
-            <p class="result__data result__data--days">60 ДНЕЙ</p>
-            <p class="result__indicators">затрачено <br> времени</p>
-          </div>
-          <p class="result__total">
-            Затраты на питание:<span class="result__total-money">15 000 РУБ.</span>
+        <div>
+          <h2 class="result__title">Живой пример</h2>
+          <p class="result__discription">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+            этом он не менял своих привычек и по-прежнему спит по 16 часов в
+            день.
           </p>
+          <div class="result__block-wrapper">
+            <div class="result__block">
+              <p class="result__data">5 КГ</p>
+              <p class="result__indicators">снижение <br> веса</p>
+            </div>
+            <div class="result__block">
+              <p class="result__data result__data--days">60 ДНЕЙ</p>
+              <p class="result__indicators">затрачено <br> времени</p>
+            </div>
+            <p class="result__total">
+              Затраты на питание:<span class="result__total-money">15 000 РУБ.</span>
+            </p>
+          </div>
         </div>
         <div class="result__slider">
           <div class="result__slider-line">
