6-модуль кроме котов

--- a/source/index.html
+++ b/source/index.html
@@ -19,9 +19,9 @@
         <source media="(min-width: 1280px)" srcset="img/logo/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo/logo-tablet.svg">
         <img class="logo" src="img/logo/logo-mobile.svg" width="33" height="37" alt="Логотип Cat Energy">
-        <img class="main-header__text-logo" src="img/logo/logo-text.svg" width="128" height="24" alt=""
-          aria-hidden="true" />
       </picture>
+      <img class="main-header__text-logo" src="img/logo/logo-text.svg" width="128" height="24" alt=""
+        aria-hidden="true" />
     </a>
     <button class="main-header__toggle" type="button">
       <span class="visually-hidden">Открыть меню</span>
@@ -52,9 +52,9 @@
         <p class="cover__slogan">Занялся собой? Займись котом!</p>
         <picture>
           <source media="(min-width: 1280px)"
-            srcset="img/main-can/index-can-desktop.png img/main-can/index-can-desktop@2x.png 2x">
+            srcset="img/main-can/index-can-desktop.png, img/main-can/index-can-desktop@2x.png 2x">
           <source media="(min-width: 768px)"
-            srcset="img/main-can/index-can-tablet.png img/main-can/index-can-tablet@2x.png 2x">
+            srcset="img/main-can/index-can-tablet.png, img/main-can/index-can-tablet@2x.png 2x">
           <img class="cover__img" src="img/main-can/index-can-mobile.png"
             srcset="img/main-can/index-can-mobile@2x.png 2x" width="280" height="270"
             alt="Натуральный продукт Cat Energy" />
