--- a/source/form.html
+++ b/source/form.html
@@ -14,13 +14,14 @@
 
 <body class="page">
   <header class="main-header container main-header--deco-line">
-    <picture>
-      <source media="(min-width: 1280px)" srcset="img/logo/logo-desktop.svg">
-      <source media="(min-width: 768px)" srcset="img/logo/logo-tablet.svg">
-      <img class="logo" src="img/logo/logo-mobile.svg" width="33" height="37" alt="Логотип Cat Energy">
+    <a class="main-header__logo" href="index.html">
+      <picture>
+        <source media="(min-width: 1280px)" srcset="img/logo/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo/logo-tablet.svg">
+        <img class="logo" src="img/logo/logo-mobile.svg" width="33" height="37" alt="Логотип Cat Energy">
+      </picture>
       <img class="main-header__text-logo" src="img/logo/logo-text.svg" width="128" height="24" alt=""
         aria-hidden="true" />
-    </picture>
     </a>
     <button class="main-header__toggle" type="button">
       <span class="visually-hidden">Открыть меню</span>
